# gobbledegook

./: .gitignore  Makefile.in  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in
